# PTaaS-Reimagined

./: .gitignore  Cargo.toml  Readme.md  dev.Dockerfile
.github/workflows/: ptaas_rs.yml
convertible/: Cargo.toml
convertible/convertible/: Cargo.toml
convertible/convertible/src/: lib.rs
convertible/convertible_definitions/src/: dart.rs  lib.rs
convertible/convertible_macros/: Cargo.toml
convertible/convertible_macros/src/: lib.rs
convertible/src/: dart.rs  lib.rs  macros.rs
convertible_macros/: Cargo.toml
convertible_macros/src/: lib.rs
convertible_macros_dev/: Cargo.toml
convertible_macros_dev/src/: main.rs
convertible_macros_test/: Cargo.toml
dart/ptaas_fr/: pubspec.yaml
dart/ptaas_fr/lib/: models.dart  models.g.dart  models_2.dart  models_2.g.dart  msg.dart
dart/ptaas_fr/linux/: CMakeLists.txt
dart/ptaas_fr/web/: index.html  manifest.json
dart/ptaas_fr/windows/: CMakeLists.txt
docker/: dev.Dockerfile
ptaas_fr/: README.md  pubspec.yaml
ptaas_fr/android/app/: build.gradle
ptaas_fr/ios/Runner/: Info.plist
ptaas_fr/ios/Runner.xcodeproj/: project.pbxproj
ptaas_fr/lib/: main.dart  models.dart  models.g.dart  models_2.dart  models_2.g.dart  msg.g.dart
ptaas_fr/linux/: my_application.cc
ptaas_fr/macos/Runner.xcodeproj/: project.pbxproj
ptaas_rs/: .gitignore  Cargo.toml  export.rs  numbers.ps1
ptaas_rs/src/: export.rs  lib.rs  main.rs  models.rs  models_2.rs  util.rs
ptaas_rs/src/project_managers/: mod.rs  process.rs  process_2.rs
ptaas_rs/src/project_managers/local_project_manager/: local_project_installer.rs  local_project_installer_2.rs  local_project_manager.rs  mod.rs
ptaas_rs/tests_dir/: numbers_with_error_code.ps1  numbers_with_error_code.sh
ptaas_rs/tests_dir/uploaded_projects/invalid_requirements/: err.txt  requirements.txt
ptaas_rs/tests_dir/uploaded_projects/locust_dir_does_not_exist/: requirements.txt
ptaas_rs/tests_dir/uploaded_projects/valid/: err.txt  out.txt  req_err.txt  req_out.txt  venv_err.txt
rust/models/: Cargo.toml
rust/ptaas_rs/: .gitignore  Cargo.toml
rust/ptaas_rs/src/: lib.rs  main.rs
rust/ptaas_rs/src/project_managers/: mod.rs  process.rs
rust/ptaas_rs/src/project_managers/local/: local_project_installer.rs  local_project_manager.rs
rust/ptaas_rs/tests_dir/: non_stop_numbers.ps1  non_stop_numbers.sh  numbers.ps1  numbers.sh  numbers_with_error_code.sh
rust/ptaas_rs/tests_dir/uploaded_projects/invalid_requirements/: req_err.txt
(+12 files in other folders)
