[workspace]

members = [
    "rust/convertible/convertible",
    "rust/convertible/convertible_definitions",
    "rust/convertible/convertible_macros",
    "rust/convertible_macros_test",
    "rust/models",
    "rust/ptaas_rs",
]

[workspace.dependencies]
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time"] }
tracing = "0.1.37"
tracing-test = "0.2.4"
async-trait = "0.1.64"
thiserror = { version = "1.0.43" }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
which = "4.4.0"
