[package]
name = "ptaas_rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convertible = {path = "../convertible"}
convertible_macros = {path = "../convertible_macros"}
tokio = {version="1.29.1", features = ["full"]}
tracing-subscriber = {version = "0.3.16", features = ["env-filter", "time"]}
tracing = "0.1.37"
async-trait = "0.1.64"
thiserror = {version="1.0.43"}
serde = {version= "1.0.166", features = ["derive"]}
serde_json = "1.0.100"
