[package]
name = "convertible"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [] 
derive = ["convertible_macros"]

[dependencies.convertible_macros]
path = "../convertible_macros"
optional = true
default-features = false

[dependencies.convertible_definitions]
path = "../convertible_definitions"
optional = false
default-features = true
