[package]
name = "ptaas_rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convertible = { path = "../convertible/convertible", features = ["derive"] }

tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "time"] }
tracing = { workspace = true }
tracing-test = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
which = { workspace = true }
